SeqMule/Download_installation
in linux terminal when we in root, we can use exit command to exit the root. but sometimes it showed "there are stopped jobs".

use jobs command to see what are the stopped jobs 

use jobs -l command to find the number

use kill number command to kill the jobs 

then we can exit.

The reason of this problem is that we use Ctrl+Z or C to cause some jobs are hung



###########################
## Prerequisites
###########################


###########################
## install perl
###########################

[wangliang@localhost ~]$ perl -v

This is perl 5, version 16, subversion 3 (v5.16.3) built for x86_64-linux-thread-multi
(with 33 registered patches, see perl -V for more detail)

Copyright 1987-2012, Larry Wall

Perl may be copied only under the terms of either the Artistic License or the
GNU General Public License, which may be found in the Perl 5 source kit.

Complete documentation for Perl, including FAQ lists, should be found on
this system using "man perl" or "perldoc perl".  If you have access to the
Internet, point your browser at http://www.perl.org/, the Perl Home Page.

###########################
## install make
###########################

[wangliang@localhost ~]$ make -v
GNU Make 3.82
Built for x86_64-redhat-linux-gnu
Copyright (C) 2010  Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.

###########################
## install cmake
###########################
yum install cmake

[root@localhost wangliang]# cmake -version
cmake version 2.8.12.2


###########################
## install gcc
###########################

[root@localhost wangliang]# gcc -v
Using built-in specs.
COLLECT_GCC=gcc
COLLECT_LTO_WRAPPER=/usr/libexec/gcc/x86_64-redhat-linux/4.8.5/lto-wrapper
Target: x86_64-redhat-linux
Configured with: ../configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info --with-bugurl=http://bugzilla.redhat.com/bugzilla --enable-bootstrap --enable-shared --enable-threads=posix --enable-checking=release --with-system-zlib --enable-__cxa_atexit --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id --with-linker-hash-style=gnu --enable-languages=c,c++,objc,obj-c++,java,fortran,ada,go,lto --enable-plugin --enable-initfini-array --disable-libgcj --with-isl=/builddir/build/BUILD/gcc-4.8.5-20150702/obj-x86_64-redhat-linux/isl-install --with-cloog=/builddir/build/BUILD/gcc-4.8.5-20150702/obj-x86_64-redhat-linux/cloog-install --enable-gnu-indirect-function --with-tune=generic --with-arch_32=x86-64 --build=x86_64-redhat-linux
Thread model: posix
gcc version 4.8.5 20150623 (Red Hat 4.8.5-16) (GCC) 



###########################
## install g++
###########################

yum install gcc-c++

[root@localhost wangliang]# which g++
/usr/bin/g++



###########################
## install curses.h
###########################

[root@localhost wangliang]# yum install ncurses
Loaded plugins: fastestmirror, langpacks
Loading mirror speeds from cached hostfile
 * base: centos.ustc.edu.cn
 * extras: centos.ustc.edu.cn
 * updates: centos.ustc.edu.cn
Package ncurses-5.9-14.20130511.el7_4.x86_64 already installed and latest version
Nothing to do




###########################
## install R
###########################
yum install epel-release

yum install R

## wait for a long time


###########################
## install unzip
###########################

yum install unzip

###########################
## install automake
###########################


yum install automake

###########################
## install autoconf
###########################

[root@localhost wangliang]# yum install autoconf
Loaded plugins: fastestmirror, langpacks
Loading mirror speeds from cached hostfile
 * base: centos.ustc.edu.cn
 * epel: mirrors.tongji.edu.cn
 * extras: centos.ustc.edu.cn
 * updates: centos.ustc.edu.cn
Package autoconf-2.69-11.el7.noarch already installed and latest version
Nothing to do



###########################
## install git
###########################

yum install git

###########################
## install gzip
###########################

yum install gzip

###########################
## install tar
###########################

yum install tar

###########################
## install java
###########################

[root@localhost wangliang]# yum install java
Loaded plugins: fastestmirror, langpacks
Loading mirror speeds from cached hostfile
 * base: centos.ustc.edu.cn
 * epel: mirrors.ustc.edu.cn
 * extras: centos.ustc.edu.cn
 * updates: centos.ustc.edu.cn
Package 1:java-1.8.0-openjdk-1.8.0.171-8.b10.el7_5.x86_64 already installed and latest version
Nothing to do


###########################
## install SeqMule
###########################

[wangliang@localhost ~]$ git clone https://github.com/WGLab/SeqMule.git
Cloning into 'SeqMule'...
remote: Counting objects: 4341, done.
remote: Total 4341 (delta 0), reused 0 (delta 0), pack-reused 4341
Receiving objects: 100% (4341/4341), 25.40 MiB | 60.00 KiB/s, done.
Resolving deltas: 100% (2753/2753), done.

cd SeqMule
./Build freshinstall

## wait for a long time

./Build installexes


## pop out notification that missing gatk and soapsnp

[wangliang@localhost SeqMule]$ ./Build gatk



!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
CAUTION: SeqMule cannot automatically install GATK due to license limitations.
Please download, unpack it and copy GenomeAnalysisTK.jar to /home/wangliang/SeqMule/exe/gatk
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!




[wangliang@localhost SeqMule]$ ./Build soapsnp

...
...
FINISHED --2018-05-24 22:31:04--
Total wall clock time: 0.8s
Downloaded: 1 files, 13K in 0.3s (45.5 KB/s)
Unpacking msort archive...
Configuring msort...
g++ -c -o msort.o msort.c -I. -g -O2 -Wall -W -m64 -m64 -lm
msort.c: In function ‘int main(int, char**)’:
msort.c:496:6: warning: variable ‘memlimit’ set but not used [-Wunused-but-set-variable]
  int memlimit;
      ^
g++ -c -o sort_funs.o sort_funs.c -I. -g -O2 -Wall -W -m64 -m64 -lm
In file included from sort_funs.c:1:0:
msort.h:116:16: warning: ‘file_db’ defined but not used [-Wunused-variable]
 static file_t *file_db = NULL;
                ^
g++    -c -o stdhashc.o stdhashc.cc
In file included from stdhashc.cc:2:0:
stdhash.hh: In instantiation of ‘bool hash_map_misc<keytype_t, valtype_t>::insert(const keytype_t&, const valtype_t&) [with keytype_t = unsigned int; valtype_t = int]’:
stdhashc.cc:72:51:   required from here
stdhash.hh:496:81: error: ‘direct_insert_aux’ was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
   int ret = direct_insert_aux(key, this->n_capacity, this->keys, this->flags, &i);
                                                                                 ^
stdhash.hh:496:81: note: declarations in dependent base ‘__lh3_hash_base_class<unsigned int>’ are not found by unqualified lookup
stdhash.hh:496:81: note: use ‘this->direct_insert_aux’ instead
make: *** [stdhashc.o] Error 1
!!!!!!!!!!!!!!!!!!!!!!!!!
ERROR: Failed to make msort

## This error has been clearly stated in 
http://seqmule.openbioinformatics.org/en/latest/Installation/

## we need change to g++ 4.4.X version
## my current version is :
[root@localhost wangliang]# yum install gcc-c++
Loaded plugins: fastestmirror, langpacks
Loading mirror speeds from cached hostfile
 * base: centos.ustc.edu.cn
 * epel: mirrors.tongji.edu.cn
 * extras: centos.ustc.edu.cn
 * updates: centos.ustc.edu.cn
Package gcc-c++-4.8.5-28.el7_5.1.x86_64 already installed and latest version
Nothing to do


## back up the original gcc(4.8.5)
mv /usr/bin/gcc /usr/bin/gcc-4.8.5
mv /usr/bin/g++ /usr/bin/g++-4.8.5
mv /usr/bin/c++ /usr/bin/c++-4.8.5


## to check the version of centos
[root@localhost bin]# cat /etc/centos-release
CentOS Linux release 7.4.1708 (Core)

## to check the version of core
[root@localhost bin]# uname -r
3.10.0-693.21.1.el7.x86_64

## check 64 or 32 of the system
[root@localhost bin]# getconf LONG_BIT
64

